deleting unnecessary tags

--- a/whereTobuy.html/index.html
+++ b/whereTobuy.html/index.html
@@ -24,7 +24,7 @@
     <section>
 
 
-        <h1>Farmers' Market</h1>
+        <h1>Farmers' Market </h1>
 
         <p class='paragraph'> Farmers' Market brings fresh, locally grown and prepared foods<br> to the Pflugerville
             community.
@@ -36,9 +36,9 @@
             <span>12 Pike St,New York,Ny 10002</span></p>
 
 
-        <!-- <iframe class="map"
+        <iframe class="map"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.197087045638!2d-73.99493998513512!3d40.713677645450794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a28efab636b%3A0xb91d13be354e7def!2s12+Pike+St%2C+New+York%2C+NY+10002%2C+USA!5e0!3m2!1sen!2spl!4v1549664943186"
-            width="500" height="450" frameborder="0" style="border:0" allowfullscreen></iframe> -->
+            width="500" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 
 
@@ -50,13 +50,13 @@
             membership.Besides food products and supplements, there are also cleaning products, pet care
             items,shampoos, makeup, and other personal care items. <span>Detroit,MI</span>
             17 Marine Rd, Boston, MA 02127 </p>
-        <!-- 
+
         <iframe class="map2"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2949.5681599247573!2d-71.04125668507913!3d42.33040864496712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e37a8d4f596551%3A0xf965246f2142018a!2s17+Marine+Rd%2C+Boston%2C+MA+02127%2C+USA!5e0!3m2!1sen!2spl!4v1549664786455"
-            width="500" height="450" frameborder="0" style="border:0" allowfullscreen></iframe> -->
+            width="500" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 
-        <!-- <h1 class="atlanta">Farmers' Market</h1>
+        <h1 class="atlanta">Farmers' Market</h1>
 
         <p class="organic">Choosing organic on Direct Eats is as easy as clicking a button.<br>Most of the items are
             sold in
@@ -64,18 +64,18 @@
             cases,
             so you're not making a big commitment if you don't like something.<span>Atlanta,GA<br>401 Lake
                 St,Sitka,AK
-                99835</span></p> -->
-        <!-- 
+                99835</span></p>
+
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2169.7852676568527!2d-135.3370510844821!3d57.05521329825888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x540467ba349c4f65%3A0x177934b88d0bbbdd!2s401+Lake+St%2C+Sitka%2C+AK+99835%2C+USA!5e0!3m2!1sen!2spl!4v1549665031373"
-            width="500" height="450" frameborder="0" style="border:0" allowfullscreen></iframe> -->
+            width="500" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
     </section>
     <footer>
-        <div>
-            <p class="webnode">Orange Grove. Freshly squeezed in 2018<br>Powered by
-                Webnode</p>
-        </div>
+
+        <p class="webnode">Orange Grove. Freshly squeezed in 2018<br>Powered by
+            Webnode</p>
+
 
     </footer>
 
