--- a/About/about.html
+++ b/About/about.html
@@ -17,7 +17,7 @@
             <li><a href="file:///C:/Users/magda/Desktop/Portfolio%20project/contact.html/index.html">Contact</a></li>
             <li><a href="file:///C:/Users/magda/Desktop/Portfolio%20project/whereTobuy.html/index.html">Where to buy</a>
             </li>
-            <li><a href="file:///C:/Users/magda/Desktop/Portfolio%20project/about.html/index.html">About</a></li>
+            <li><a href="../about.html">About</a></li>
             <li><a href="file:///C:/Users/magda/Desktop/Portfolio%20project/home.html/index.html">Home</a></li>
         </ul>
 
