--- a/Home/mainpage.html
+++ b/Home/mainpage.html
@@ -22,15 +22,15 @@
             <ul>
                 <li class="orange">Orange Grove</li>
 
-                <li><a href="file:///C:/Users/magda/Desktop/Portfolio%20project/contact.html/index.html">Contact</a>
+                <li><a href="../contact.html">Contact</a>
                 </li>
 
-                <li><a href="file:///C:/Users/magda/Desktop/Portfolio%20project/whereTobuy.html/index.html">Where to
+                <li><a href="../whereTobuy.html">Where to
                         buy</a></li>
 
-                <li><a href="file:///C:/Users/magda/Desktop/Portfolio%20project/about.html/index.html">About</a></li>
+                <li><a href="../about.html">About</a></li>
 
-                <li><a href="file:///C:/Users/magda/Desktop/Portfolio%20project/home.html/index.html">Home</a></li>
+                <li><a href="../home.html">Home</a></li>
             </ul>
         </nav>
         <nav class="mobile">
@@ -38,13 +38,13 @@
             <ul>
                 <li class="orange"><a href="#"></a>Orange Grove</li>
 
-                <li><a href="./contact.html">Home</a></li>
+                <li><a href="../contact.html">Home</a></li>
 
-                <li><a href="./whereTobuy.html">About</a></li>
+                <li><a href="../whereTobuy.html">About</a></li>
 
-                <li><a href="./about.html">Where to buy</a></li>
+                <li><a href="../about.html">Where to buy</a></li>
 
-                <li><a href="./home.html">Contact</a></li>
+                <li><a href="../home.html">Contact</a></li>
             </ul>
         </nav>
 
