--- a/Home/mainpage.html
+++ b/Home/mainpage.html
@@ -9,10 +9,12 @@
 
 
     <title>Portfolio project</title>
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <style type="text/css">
+        @import "mainpage.css";
+    </style>
     <!--Ikonka strony-->
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <script src="main.js"></script>
+
 </head>
 
 <body>
@@ -22,15 +24,15 @@
             <ul>
                 <li class="orange">Orange Grove</li>
 
-                <li><a href="../contact.html">Contact</a>
+                <li><a href="contact.html">Contact</a>
                 </li>
 
-                <li><a href="../whereTobuy.html">Where to
+                <li><a href="whereTobuy.html">Where to
                         buy</a></li>
 
-                <li><a href="../about.html">About</a></li>
+                <li><a href="about.html">About</a></li>
 
-                <li><a href="../home.html">Home</a></li>
+                <li><a href="mainpage.html">Home</a></li>
             </ul>
         </nav>
         <nav class="mobile">
@@ -38,13 +40,13 @@
             <ul>
                 <li class="orange"><a href="#"></a>Orange Grove</li>
 
-                <li><a href="../contact.html">Home</a></li>
+                <li><a href="contact.html">Home</a></li>
 
-                <li><a href="../whereTobuy.html">About</a></li>
+                <li><a href="whereTobuy.html">About</a></li>
 
-                <li><a href="../about.html">Where to buy</a></li>
+                <li><a href="about.html">Where to buy</a></li>
 
-                <li><a href="../home.html">Contact</a></li>
+                <li><a href="mainpage.html">Contact</a></li>
             </ul>
         </nav>
 
