--- a/Home/contact.html
+++ b/Home/contact.html
@@ -17,7 +17,7 @@
     <nav>
         <ul>
             <li class="orange">Orange Grove</li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li><a href="whereTobuy.html">Where to buy</a> </li>
             <li><a href="about.html">About</a></li>
             <li><a href="mainpage.html">Home</a></li>
