--- a/Home/mainpage.html
+++ b/Home/mainpage.html
@@ -53,10 +53,10 @@
         <section>
 
             <div>
-                <h3 class="juice">FRESH JUICE<br>&ORANGES</h3>
+                <h3 class="juice">FRESH JUICE<span>&ORANGES</span></h3>
 
-                <p class="item">Discover the taste of our oranges and fresh juice<br> made from the finest
-                    varieties of sweet oranges.</p>
+                <p class="item">Discover the taste of our oranges and fresh juice<span> made from the finest
+                        varieties of sweet oranges.</span></p>
             </div>
             <div>
                 <img class="right"
@@ -66,10 +66,10 @@
 
 
             <div>
-                <h2 class="groves">From our<br> own groves</h2>
+                <h2 class="groves">From our<span> own groves</span></h2>
                 <p class="farm">
-                    Home-grown on a small family-owned farm in the heart of Florida.<br>
-                    Our oranges are full of sunshine and are all-natural with no herbicides,<br>insecticides or
+                    Home-grown on a small family-owned farm in the heart of Florida.<span>
+                        Our oranges are full of sunshine and are all-natural with no herbicides,</span>insecticides or
                     ferilizers added. </p>
             </div>
             <div>
@@ -79,10 +79,10 @@
             </div>
 
             <div>
-                <h2 class="vitamin">Contains Vitamins<br> and Antioxidants</h2>
+                <h2 class="vitamin">Contains Vitamins<span> and Antioxidants</span></h2>
 
-                <p class="paragraph"> The cold pressed juice is rich in vitamins A,C and<br> minerals like calcium
-                    and iron.</p>
+                <p class="paragraph"> The cold pressed juice is rich in vitamins A,C and<span> minerals like calcium
+                        and iron.</span></p>
             </div>
 
             <div>
@@ -92,11 +92,12 @@
             </div>
 
             <div>
-                <h2 class="freshness">Your daily<br>dose of freshness</h2>
+                <h2 class="freshness">Your daily<span>dose of freshness</span></h2>
 
-                <p class="market">Pick up a bottle of our juice at your local farmers' market or<br> have it
-                    delivered to your
-                    home and enjoy the benefits of having<br> your dose of freshness ready every day.</p>
+                <p class="market">Pick up a bottle of our juice at your local farmers' market or<span> have it delivered
+                        to your
+                        home and enjoy the benefits of having
+                    </span> your dose of freshness ready every day.</p>
             </div>
 
             <div>
@@ -106,9 +107,9 @@
             </div>
             <div>
                 <h2 class="taste">Follow the taste</h2>
-                <p class="bottle">Order your bottle online, pick one at a local farmers' market or come by our
-                    grove stand. We
-                    will happily serve<br><span id="span">you our best cold-pressed juice.</span> </p>
+                <!-- <p >Order your bottle online, pick one at a local farmers' market or come by our
+                    grove stand. </p> -->
+
 
             </div>
             <div>
