--- a/Home/contact.html
+++ b/Home/contact.html
@@ -28,8 +28,8 @@
     <section>
         <h1 class="contact">Contact Us</h1>
 
-        <p class="area">If you are in the area, stop by and get a free sample or pick your daily dose of freshness at
-            your local farmers' market.<span>Orange Grove<br>2 Pike St, New York, NY 10002</span></p>
+        <p class="area">If you are in the area, stop by and get a free sample<span>or pick your daily dose of freshness
+                at your local farmers' market.</span><span>Orange Grove 2 Pike St, New York, NY 10002</span></p>
 
 
         <form class="myForm" id="contactForm" method="post" action="/send-scripts.php">
