changes in code

--- a/Home/mainpage.html
+++ b/Home/mainpage.html
@@ -19,34 +19,18 @@
 
 <body>
     <div class="container">
-        <nav class="desktop">
-            <!--Responsive Web Design-->
+        <nav class="flex-nav">
             <ul>
                 <li class="orange">Orange Grove</li>
 
-                <li><a href="contact.html">Contact</a>
+                <li><a href="mainpage.html">Home</a>
                 </li>
-
-                <li><a href="whereTobuy.html">Where to
-                        buy</a></li>
 
                 <li><a href="about.html">About</a></li>
 
-                <li><a href="mainpage.html">Home</a></li>
-            </ul>
-        </nav>
-        <nav class="mobile">
-            <!--Responsive web design-->
-            <ul>
-                <li class="orange"><a href="#"></a>Orange Grove</li>
+                <li><a href="whereTobuy.html">Where to buy</a></li>
 
-                <li><a href="contact.html">Home</a></li>
-
-                <li><a href="whereTobuy.html">About</a></li>
-
-                <li><a href="about.html">Where to buy</a></li>
-
-                <li><a href="mainpage.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
 
@@ -64,8 +48,7 @@
                     alt="Orange bottle">
             </div>
 
-
-            <div>
+            <!-- <div>
                 <h2 class="groves">From our<span> own groves</span></h2>
                 <p class="farm">
                     Home-grown on a small family-owned farm in the heart of Florida.<span>
@@ -106,12 +89,12 @@
                     alt="fruits">
             </div>
             <div>
-                <h2 class="taste">Follow the taste</h2>
-                <!-- <p >Order your bottle online, pick one at a local farmers' market or come by our
+                <h2 class="taste">Follow the taste</h2> -->
+            <!-- <p >Order your bottle online, pick one at a local farmers' market or come by our
                     grove stand. </p> -->
 
 
-            </div>
+            <!-- </div>
             <div>
                 <button class="button">Contact us</button>
             </div>
@@ -121,9 +104,9 @@
 
             <p class="webnode">Orange Grove. Freshly squeezed in 2018<br>Powered by Webnode</p>
 
-        </footer>
+        </footer> -->
 
-
+    </div>
 </body>
 
 </html>
