add div and class to nav

--- a/Home/about.html
+++ b/Home/about.html
@@ -13,50 +13,51 @@
 </head>
 
 <body>
+    <div class="container">
+        <nav class="flex-nav">
+            <ul>
+                <li class="orange">Orange Grove</li>
+                <li><a href="mainpage.html">Home</a></li>
+                <li><a href="about.html">About</a>
+                </li>
+                <li><a href="whereTobuy.html">Where to buy</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
 
-    <nav>
-        <ul>
-            <li class="orange">Orange Grove</li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="whereTobuy.html">Where to buy</a>
-            </li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="mainpage.html">Home</a></li>
-        </ul>
+        </nav>
 
-    </nav>
+        <section>
 
-    <section>
+            <main>
+                <!--main  nie jest elementem elastycznym bo jest dzieckiem section czyli juz nie obejmuje -->
+                <h3 class="item">Who we are</h3>
+                <p class="paragraph">Click here and start typing. Totam rem aperiam</br> eaque ipsa quae ab illo
+                    inventore veritatis et
+                    quasi</br> architecto beatae vitae dicta sunt explicabo nemo</br> enim ipsam voluptatem quia
+                    voluptas
+                    sit
+                    aspernatur</br> aut odit aut fugit sed quia consequuntur.</br>
+                    <br>With love,
+                    <br>
+                    <br>Orange Grove team<br></p>
 
-        <main>
-            <!--main  nie jest elementem elastycznym bo jest dzieckiem section czyli juz nie obejmuje -->
-            <h3 class="item">Who we are</h3>
-            <p class="paragraph">Click here and start typing. Totam rem aperiam</br> eaque ipsa quae ab illo
-                inventore veritatis et
-                quasi</br> architecto beatae vitae dicta sunt explicabo nemo</br> enim ipsam voluptatem quia voluptas
-                sit
-                aspernatur</br> aut odit aut fugit sed quia consequuntur.</br>
-                <br>With love,
-                <br>
-                <br>Orange Grove team<br></p>
+            </main>
+            <aside>
+                <!--aside nie jest elementem elastycznym bo jest dzieckiem section czyli juz nie obejmuje -->
 
-        </main>
-        <aside>
-            <!--aside nie jest elementem elastycznym bo jest dzieckiem section czyli juz nie obejmuje -->
+                <img src="http://blog.tapuz.co.il/CooknBake/images/%7B20B4855D-6125-4BA8-9E7B-C5DB21E41F46%7D.gif">
 
-            <img src="http://blog.tapuz.co.il/CooknBake/images/%7B20B4855D-6125-4BA8-9E7B-C5DB21E41F46%7D.gif">
+            </aside>
+        </section>
+        <footer>
 
-        </aside>
-    </section>
-    <footer>
-
-        <p class="webnode">Orange Grove. Freshly squeezed in 2018<br>Powered by
-            Webnode</p>
-
-
-    </footer>
+            <p class="webnode">Orange Grove. Freshly squeezed in 2018<br>Powered by
+                Webnode</p>
 
 
+        </footer>
+
+    </div>
 </body>
 
 </html>
