remove class from div

--- a/Home/mainpage.html
+++ b/Home/mainpage.html
@@ -45,12 +45,11 @@
 
             </div>
             <div class="picture">
-                <img class="right"
-                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_WfUOrq3OKzmmM7RwTnuXY4BqyC8SrEx0aGZq3DF4-8iUanzo"
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_WfUOrq3OKzmmM7RwTnuXY4BqyC8SrEx0aGZq3DF4-8iUanzo"
                     alt="Orange bottle">
 
             </div>
-            <div>
+            <div class="family-farm">
                 <h2 class="groves">From our<span> own groves</span></h2>
                 <p class="farm">
                     Home-grown on a small family-owned farm in the heart of Florida.<span>
@@ -100,13 +99,14 @@
             <div>
                 <button class="button">Contact us</button>
             </div>
-
+        -->
         </section>
+
         <footer>
 
-            <p class="webnode">Orange Grove. Freshly squeezed in 2018<br>Powered by Webnode</p>
+            <p class="webnode">Orange Grove. Freshly squeezed in 2018<span>Powered by Webnode</span></p>
 
-        </footer> -->
+        </footer>
 
     </div>
 </body>
