--- a/Home/mainpage.html
+++ b/Home/mainpage.html
@@ -92,14 +92,14 @@
             <div>
                 <h2 class="taste">Follow the taste</h2> -->
             <!-- <p >Order your bottle online, pick one at a local farmers' market or come by our
-                    grove stand. </p> -->
+                    grove stand. </p> 
 
 
-            <!-- </div>
-            <div>
+             </div> -->
+            <div class="contact">
                 <button class="button">Contact us</button>
             </div>
-        -->
+
         </section>
 
         <footer>
