--- a/Home/whereTobuy.html
+++ b/Home/whereTobuy.html
@@ -24,34 +24,38 @@
             </ul>
         </nav>
         <section>
+            <div class="item">
+                <h1>Farmers' Market </h1>
+
+                <p class='paragraph'><span>Farmers' Market brings fresh, locally grown and prepared foods
+                        to
+                        the Pflugerville
+                        community.</span><span>
+                        Vendors
+                        sell a
+                        variety of produce including tomatoes,cucumbers, beans, squash, okra, garlic,
+                        melons,
+                        peaches and
+                        grapes.</span>
+                    <span>New York,NY</span>
+                    <span>12 Pike St,New York,Ny 10002</span></p>
 
 
-            <h1>Farmers' Market </h1>
-
-            <p class='paragraph'> Farmers' Market brings fresh, locally grown and prepared foods<br> to the Pflugerville
-                community.
-                Vendors
-                sell a
-                variety of produce including tomatoes,<br> cucumbers, beans, squash, okra, garlic, melons, peaches and
-                grapes.<br>
-                <span>New York,NY</span><br>
-                <span>12 Pike St,New York,Ny 10002</span></p>
+                <iframe class="map"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.197087045638!2d-73.99493998513512!3d40.713677645450794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a28efab636b%3A0xb91d13be354e7def!2s12+Pike+St%2C+New+York%2C+NY+10002%2C+USA!5e0!3m2!1sen!2spl!4v1549664943186"
+                    width="500" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 
-            <iframe class="map"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.197087045638!2d-73.99493998513512!3d40.713677645450794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a28efab636b%3A0xb91d13be354e7def!2s12+Pike+St%2C+New+York%2C+NY+10002%2C+USA!5e0!3m2!1sen!2spl!4v1549664943186"
-                width="500" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-
-
-
+            </div>
             <h1 class="food">Health Food Store</h1>
 
-            <p class="store">Thrive Market is a very popular natural and organic store, with a twist. In order to
-                purchase,
-                you need
-                to subscribe to become a member, and that money helps to sponsor a low-income family’s
-                membership.Besides food products and supplements, there are also cleaning products, pet care
-                items,shampoos, makeup, and other personal care items. <span>Detroit,MI</span>
+            <p class="store"><span>Thrive Market is a very popular natural and organic store, with a twist. In order to
+                    purchase,
+                    you need </span><span>
+                    to subscribe to become a member, and that money helps to sponsor a low-income family’s
+                    membership.</span><span>Besides food products and supplements, there are also cleaning products, pet
+                    care
+                    items,shampoos,</span><span>makeup, and other personal care items.</span> <span>Detroit,MI</span>
                 17 Marine Rd, Boston, MA 02127 </p>
 
             <iframe class="map2"
