--- a/Home/about.html
+++ b/Home/about.html
@@ -31,15 +31,12 @@
             <main>
                 <!--main  nie jest elementem elastycznym bo jest dzieckiem section czyli juz nie obejmuje -->
                 <h3 class="item">Who we are</h3>
-                <p class="paragraph">Click here and start typing. Totam rem aperiam</br> eaque ipsa quae ab illo
-                    inventore veritatis et
-                    quasi</br> architecto beatae vitae dicta sunt explicabo nemo</br> enim ipsam voluptatem quia
-                    voluptas
-                    sit
-                    aspernatur</br> aut odit aut fugit sed quia consequuntur.</br>
-                    <br>With love,
-                    <br>
-                    <br>Orange Grove team<br></p>
+                <p lang="en" class="paragraph"><span>Click here and start typing. Totam rem aperiam eaque ipsa quae ab
+                        illo<span> inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </span>nemo
+                        enim ipsam voluptatem
+                        quia voluptas sits aspernatur aut odit aut<span> fugit sed quia consequuntur.</span>
+                        <span> With love,</span>
+                        <span>Orange Grove team</span></p>
 
             </main>
             <aside>
