--- a/Home/whereTobuy.html
+++ b/Home/whereTobuy.html
@@ -80,8 +80,8 @@
         </section>
         <footer>
 
-            <p class="webnode">Orange Grove. Freshly squeezed in 2018<br>Powered by
-                Webnode</p>
+            <p class="webnode">Orange Grove. Freshly squeezed in 2018<span>Powered by
+                    Webnode</span></p>
 
 
         </footer>
