--- a/Home/contact.html
+++ b/Home/contact.html
@@ -64,6 +64,12 @@
             </form>
 
         </section>
+
+        <footer>
+
+            <p class="webnode">Orange Grove. Freshly squeezed in 2018<span>Powered by Webnode</span></p>
+
+        </footer>
 </body>
 
 </html>
