add class home-grown

--- a/Home/mainpage.html
+++ b/Home/mainpage.html
@@ -50,7 +50,7 @@
 
         <div class="family-farm">
 
-            <div>
+            <div class="home-grown">
                 <h2>From our<span> own groves</span></h2>
                 <p>
                     Home-grown on a small family-owned farm in the heart of Florida.
