remove some not necessary code

--- a/Home/about.html
+++ b/Home/about.html
@@ -26,31 +26,33 @@
 
         </nav>
 
-        <section>
+        <div class="flex-item">
+            <div class="f-box">
+                <h3>Who we are</h3>
 
-            <main>
-                <!--main  nie jest elementem elastycznym bo jest dzieckiem section czyli juz nie obejmuje -->
-                <h3 class="item">Who we are</h3>
-                <p lang="en" class="paragraph"><span>Click here and start typing. Totam rem aperiam eaque ipsa quae ab
-                        illo<span> inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </span>nemo
-                        enim ipsam voluptatem
-                        quia voluptas sits aspernatur aut odit aut<span> fugit sed quia consequuntur.</span>
-                        <span> With love,</span>
-                        <span>Orange Grove team</span></p>
+                <p>Click here and start typing. Totam rem aperiam eaque ipsa quae ab
+                    illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo nemo
+                    enim ipsam voluptatem
+                    quia voluptas sits aspernatur aut odit aut fugit sed quia consequuntur.
+                    <p> With love,</p>
+                    <p>Orange Grove team</p>
 
-            </main>
-            <aside>
-                <!--aside nie jest elementem elastycznym bo jest dzieckiem section czyli juz nie obejmuje -->
+            </div>
 
-                <img src="http://blog.tapuz.co.il/CooknBake/images/%7B20B4855D-6125-4BA8-9E7B-C5DB21E41F46%7D.gif">
 
-            </aside>
-        </section>
+            <img class="coffer"
+                src="http://blog.tapuz.co.il/CooknBake/images/%7B20B4855D-6125-4BA8-9E7B-C5DB21E41F46%7D.gif"
+                alt="oranges">
+
+        </div>
+
+
+
         <footer>
 
-            <p class="webnode">Orange Grove. Freshly squeezed in 2018<span>Powered by
-                    Webnode</span></p>
+            <p>Orange Grove. Freshly squeezed in 2018</P>
 
+            <p>Powered by Webnode</p>
 
         </footer>
 
