--- a/Home/whereTobuy.html
+++ b/Home/whereTobuy.html
@@ -23,65 +23,71 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        <section>
-            <div class="item">
+
+        <div class="item">
+            <div class="f-width">
                 <h1>Farmers' Market </h1>
 
-                <p class='paragraph'><span>Farmers' Market brings fresh, locally grown and prepared foods
-                        to
-                        the Pflugerville
-                        community.</span><span>
-                        Vendors
-                        sell a
-                        variety of produce including tomatoes,cucumbers, beans, squash, okra, garlic,
-                        melons,
-                        peaches and
-                        grapes.</span>
-                    <span>New York,NY</span>
-                    <span>12 Pike St,New York,Ny 10002</span></p>
-
-
-                <iframe class="map"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.197087045638!2d-73.99493998513512!3d40.713677645450794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a28efab636b%3A0xb91d13be354e7def!2s12+Pike+St%2C+New+York%2C+NY+10002%2C+USA!5e0!3m2!1sen!2spl!4v1549664943186"
-                    width="500" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-
+                <p>Farmers' Market brings fresh, locally grown and prepared foods
+                    to
+                    the Pflugerville
+                    community.Vendors
+                    sell a variety of produce including tomatoes,cucumbers, beans, squash, okra, garlic,
+                    melons, peaches and
+                    grapes.</p>
+                <p>New York,NY</p>
+                <p>12 Pike St,New York,Ny 10002</p>
 
             </div>
-            <h1 class="food">Health Food Store</h1>
+            <iframe class="map"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.197087045638!2d-73.99493998513512!3d40.713677645450794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a28efab636b%3A0xb91d13be354e7def!2s12+Pike+St%2C+New+York%2C+NY+10002%2C+USA!5e0!3m2!1sen!2spl!4v1549664943186"
+                width="500" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-            <p class="store"><span>Thrive Market is a very popular natural and organic store, with a twist. In order to
+
+        </div>
+
+        <div class="f-store">
+            <div>
+                <h2>Health Food Store</h2>
+
+                <p>Thrive Market is a very popular natural and organic store, with a twist. In order to
                     purchase,
-                    you need </span><span>
-                    to subscribe to become a member, and that money helps to sponsor a low-income family’s
-                    membership.</span><span>Besides food products and supplements, there are also cleaning products, pet
+                    you need to subscribe to become a member, and that money helps to sponsor a low-income family’s
+                    membership.Besides food products and supplements, there are also cleaning products, pet
                     care
-                    items,shampoos,</span><span>makeup, and other personal care items.</span> <span>Detroit,MI</span>
-                17 Marine Rd, Boston, MA 02127 </p>
-
+                    items,shampoos,makeup, and other personal care items.
+                    <p>Detroit,MI</p>
+                    <p> 17 Marine Rd, Boston, MA 02127 </p>
+            </div>
             <iframe class="map2"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2949.5681599247573!2d-71.04125668507913!3d42.33040864496712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e37a8d4f596551%3A0xf965246f2142018a!2s17+Marine+Rd%2C+Boston%2C+MA+02127%2C+USA!5e0!3m2!1sen!2spl!4v1549664786455"
                 width="500" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
 
+        <div class="flex-market">
+            <div>
+                <h2 class="atlanta">Farmers' Market</h2>
 
-            <h1 class="atlanta">Farmers' Market</h1>
-
-            <p class="organic">Choosing organic on Direct Eats is as easy as clicking a button.<br>Most of the items are
-                sold in
-                multi-packs, but the quantities are reasonable. Many of them are just 3- or 4-packs rather than full
-                cases,
-                so you're not making a big commitment if you don't like something.<span>Atlanta,GA<br>401 Lake
-                    St,Sitka,AK
-                    99835</span></p>
-
+                <p class="organic">Choosing organic on Direct Eats is as easy as clicking a button.<br>Most of the items
+                    are
+                    sold in
+                    multi-packs, but the quantities are reasonable. Many of them are just 3- or 4-packs rather than full
+                    cases,
+                    so you're not making a big commitment if you don't like something.<p>Atlanta,GA</p>
+                    <p>401 Lake
+                        St,Sitka,AK
+                        99835</p>
+            </div>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2169.7852676568527!2d-135.3370510844821!3d57.05521329825888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x540467ba349c4f65%3A0x177934b88d0bbbdd!2s401+Lake+St%2C+Sitka%2C+AK+99835%2C+USA!5e0!3m2!1sen!2spl!4v1549665031373"
                 width="500" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
 
-        </section>
         <footer>
 
-            <p class="webnode">Orange Grove. Freshly squeezed in 2018<span>Powered by
-                    Webnode</span></p>
+            <p>Orange Grove. Freshly squeezed in 2018</p>
+            <p>Powered by
+                Webnode</p>
 
 
         </footer>
