--- a/Home/mainpage.html
+++ b/Home/mainpage.html
@@ -36,14 +36,15 @@
 
         <div class="d-flex">
 
-            <div>
+            <div class="fresh-juice">
                 <h3>FRESH JUICE<span>&ORANGES</span></h3>
 
                 <p>Discover the taste of our oranges and fresh juice <span>made from the finest varieties of sweet
                         oranges.</span></p>
             </div>
 
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_WfUOrq3OKzmmM7RwTnuXY4BqyC8SrEx0aGZq3DF4-8iUanzo"
+            <img class="img-bottle"
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_WfUOrq3OKzmmM7RwTnuXY4BqyC8SrEx0aGZq3DF4-8iUanzo"
                 alt="Orange bottle">
 
         </div>
