--- a/Home/contact.html
+++ b/Home/contact.html
@@ -24,52 +24,56 @@
             </ul>
 
         </nav>
-
-        <section>
+        < <div class="flex">
             <h1 class="contact">Contact Us</h1>
 
-            <p class="area">If you are in the area, stop by and get a free sample<span>or pick your daily dose of
-                    freshness
-                    at your local farmers' market.</span><span>Orange Grove 2 Pike St, New York, NY 10002</span></p>
+            <p>If you are in the area, stop by and get a free sample or pick your daily dose of
+                freshness
+                at your local farmers' market.<p>Orange Grove 2 Pike St,</p>
+                <p> New York, NY 10002</p>
+    </div>
+
+    <div class="form">
+        <form class="myForm" id="contactForm" method="post" action="/send-scripts.php">
+
+            <div class="form-row"></br>
+                <label for="field-name">Your Name*</label>
+                <input type="text" name="field-name" required id="name" data-error="Wypełnij to pole"
+                    pattern="[a-zA-ZąĄććęęłŁńŃóÓśŚżŻŹŹ ]+">
+            </div>
+
+            <div class="form-row"></br>
+                <label for="field-email">Email*</label>
+                <input type="text" name="field-email" required id="email" data-error="Wpisz poprawny email"
+                    pattern="[^@\s]+@[^@\s]+\.[^@\s]+">
 
 
-            <form class="myForm" id="contactForm" method="post" action="/send-scripts.php">
+            </div>
 
-                <div class="form-row"></br>
-                    <label for="field-name">Your Name*</label>
-                    <input type="text" name="field-name" required id="name" data-error="Wypełnij to pole"
-                        pattern="[a-zA-ZąĄććęęłŁńŃóÓśŚżŻŹŹ ]+">
-                </div>
+            <div class="form-row"></br>
+                <label for="field-message">Message*</label>
+                <textarea name="message" required data-error="Musisz wypełnić pole" id="field-message"
+                    pattern=".+"></textarea>
 
-                <div class="form-row"></br>
-                    <label for="field-email">Email*</label>
-                    <input type="text" name="field-email" required id="email" data-error="Wpisz poprawny email"
-                        pattern="[^@\s]+@[^@\s]+\.[^@\s]+">
+            </div>
 
-
-                </div>
-
-                <div class="form-row"></br>
-                    <label for="field-message">Message*</label>
-                    <textarea name="message" required data-error="Musisz wypełnić pole" id="field-message"
-                        pattern=".+"></textarea>
-
-                </div>
-
-                <div class="form-row"></br>
-                    <button type="submit">Submit</button>
-                </div>
+            <div class="form-row"></br>
+                <button type="submit">Submit</button>
+            </div>
 
 
-            </form>
+        </form>
 
-        </section>
+    </div>
+    </div>
 
-        <footer>
 
-            <p class="webnode">Orange Grove. Freshly squeezed in 2018<span>Powered by Webnode</span></p>
 
-        </footer>
+    <footer>
+
+        <p>Orange Grove. Freshly squeezed in 2018<p class="webnode">Powered by Webnode</p>
+
+    </footer>
 </body>
 
 </html>
